# backuper

./: .gitignore  CMakeLists.txt  README.md
src/: configcontroller.cpp  configcontroller.h  core.cpp  core.h  core.ui  main.cpp  resources.qrc  syncentity.cpp  syncentity.h
